// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal render correctly 1`] = `
<div>
  <div
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  />
  <div
    class="ant-modal-root"
  >
    <div
      class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
    />
    <div
      class="ant-modal-wrap ant-modal-centered"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="ant-modal osui-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
        role="document"
        style="width: 600px;"
      >
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
        <div
          class="ant-modal-content"
        >
          <button
            aria-label="Close"
            class="ant-modal-close"
            type="button"
          >
            <span
              class="ant-modal-close-x"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  stroke="currentColor"
                  stroke-width="64"
                />
              </svg>
            </span>
          </button>
          <div
            class="ant-modal-body"
          >
            Here is content of Modal
          </div>
          <div
            class="ant-modal-footer"
          >
            <div
              style="display: flex; align-items: center; justify-content: flex-end;"
            >
              <button
                class="ant-btn ant-btn-default osui-button"
                type="button"
              >
                <span>
                  取 消
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary osui-button"
                type="button"
              >
                <span>
                  确 定
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal render without footer 1`] = `
<div>
  <div
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  />
  <div
    class="ant-modal-root"
  >
    <div
      class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
    />
    <div
      class="ant-modal-wrap ant-modal-centered"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="ant-modal osui-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
        role="document"
        style="width: 600px;"
      >
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
        <div
          class="ant-modal-content"
        >
          <button
            aria-label="Close"
            class="ant-modal-close"
            type="button"
          >
            <span
              class="ant-modal-close-x"
            >
              <svg
                class="osui-icon "
                focusable="false"
                height="1024"
                viewBox="0 0 1024 1024"
                width="1024"
              >
                <path
                  d="M829.077 150.255l45.255 45.255-316.784 316.783 316.784 316.784-45.255 45.255-316.784-316.784L195.51 874.332l-45.255-45.255 316.784-316.784L150.255 195.51l45.255-45.255 316.783 316.784 316.784-316.784z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  stroke="currentColor"
                  stroke-width="64"
                />
              </svg>
            </span>
          </button>
          <div
            class="ant-modal-body"
          >
            Here is content of Modal
          </div>
        </div>
        <div
          aria-hidden="true"
          style="width: 0px; height: 0px; overflow: hidden; outline: none;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal rtl render component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Modal support closeIcon 1`] = `
<div
  class="ant-modal-root"
>
  <div
    class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
  />
  <div
    class="ant-modal-wrap ant-modal-centered"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="ant-modal osui-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
      role="document"
      style="width: 600px;"
    >
      <div
        aria-hidden="true"
        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
        tabindex="0"
      />
      <div
        class="ant-modal-content"
      >
        <button
          aria-label="Close"
          class="ant-modal-close"
          type="button"
        >
          <span
            class="ant-modal-close-x"
          >
            <a>
              closeIcon
            </a>
          </span>
        </button>
        <div
          class="ant-modal-body"
        />
        <div
          class="ant-modal-footer"
        >
          <div
            style="display: flex; align-items: center; justify-content: flex-end;"
          >
            <button
              class="ant-btn ant-btn-default osui-button"
              type="button"
            >
              <span>
                取 消
              </span>
            </button>
            <button
              class="ant-btn ant-btn-primary osui-button"
              type="button"
            >
              <span>
                确 定
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
